# gemteks_training

./: README.md
LinuxSP/01.Shell_script/P1.calculator/: calculator.sh
LinuxSP/01.Shell_script/P2.find_unique_number/: solution.sh
LinuxSP/02.File_system/P1/: CMakeCache.txt  CMakeLists.txt  main.c
LinuxSP/02.File_system/P1.Entry_in_directory/: Makefile  cmake_install.cmake
LinuxSP/02.File_system/P1.Entry_in_directory/docs/: README.md
LinuxSP/02.File_system/P1/inc/: usr.h
LinuxSP/02.File_system/P1/src/: usr.c
LinuxSP/02.File_system/P2/: Makefile  main  main.c
LinuxSP/02.File_system/P2.String_to_file/: README.md
LinuxSP/02.File_system/P3/: main.c
LinuxSP/02.File_system/P3.Add_link_to_file/: CMakeCache.txt  Makefile  cmake_install.cmake  main  main.c
LinuxSP/02.File_system/P3.Add_link_to_file/docs/: README.md
LinuxSP/02.File_system/P3.Add_link_to_file/inc/: usr.h
LinuxSP/02.File_system/P3.Add_link_to_file/src/: usr.c
LinuxSP/02.File_system/P3.Add_link_to_file/test/fd1/: soft_link_file
LinuxSP/02.File_system/P3.Add_link_to_file/test/fd2/fd22/: fd22
LinuxSP/02.File_system/P3/inc/: usr.h
LinuxSP/02.File_system/P3/src/: usr.c
